Fix word wrapping Improve search margins

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,6 +10,7 @@
 
         >p {
             margin: 0.5em 0 0 0;
+            word-wrap: break-word;
         }
     }
 
