--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,8 +7,6 @@
     grid-gap: 5%;
     justify-items: stretch;
     align-items: center;
-    width: 100%;
-    height: 100%;
     color: black;
 
     >.navbar-item {
@@ -28,7 +26,7 @@
         &.search-bar {
             grid-row: 2;
             grid-column: 1 / end;
-            margin: 0 1vw 0.5em 1vw;
+            margin: 0 4vw 0.8em 4vw;
         }
 
         &.switch {
@@ -90,6 +88,7 @@
                 grid-row: 1;
                 grid-column: 2;
                 margin-top: 0.5em;
+                margin-bottom: 0.5em;
             }
 
             &.switch {
